add otp register
